--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
       <h1>
       
       <h3><a href="index2.html">ai繪圖Output</a></h3>
-      <br>
-      <h1>以下是我寫CPE的題目</h1>
+      <h3><a href="index3.html">about</a></h3>
+      <h3><a href="index4.html">interest</a></h3>
+      <h3><a href="index5.html">future</a></h3>
+      <h1>以下是我寫過的CPE的題目</h1>
       <ol>
          <font size=5><b><li> <a href="https://github.com/KKacobls/UVA/blob/master/uva100.java"> uva100.java </a></li></b></font>
          <font size=5><b><li> <a href="https://github.com/KKacobls/UVA/blob/master/uva10008.java"> uva10008.java </a></li></b></font>
