--- a/index2.html
+++ b/index2.html
@@ -1,13 +1,15 @@
 <html>
-   <body bgcolor="#303030">
+   <body>
       <!--<h1 style="color:rgb(31, 30, 30)">KKacobls的網頁</h1> -->
-      <h1 style="color:rgb(252, 252, 252)"><marquee behavior=scroll>KKacobls的網頁</marquee></h1>
-      <font size=5><span style="color:rgb(252, 252, 252)">這裡是我ai繪圖曾經的作品</span></font>
+      <h1 style="color:rgb(0, 0, 0)"><marquee behavior=scroll>KKacobls的網頁</marquee></h1>
+      <font size=5>這裡是我ai繪圖曾經的作品</font>
       <br>
-      <font size=5><span style="color:rgb(252, 252, 252)">看起來怪怪的是正常 因為是ai繪的</span></font>
-      
+      <font size=5>看起來怪怪的是正常 因為是ai繪的</font>
       <br>
-      <img src="png/1 (10).png">
+      <input type ="button" onclick="history.back()" value="回到上一頁"></input>
+      <br>
+      <img src="png/1 (1).png">  
+      <img src="png/1 (10).png"> 
       <img src="png/1 (100).png">
       <img src="png/1 (101).png">
       <img src="png/1 (102).png">
@@ -15,7 +17,6 @@
       <img src="png/1 (104).png">
       <img src="png/1 (105).png">
       <img src="png/1 (106).png">
-      <img src="png/1 (1).png">
       <img src="png/1 (107).png">
       <img src="png/1 (108).png">
       <img src="png/1 (109).png">
@@ -25,8 +26,6 @@
       <img src="png/1 (112).png">
       <img src="png/1 (113).png">
       <img src="png/1 (114).png">
-      <img src="png/1 (115).png">
-      <img src="png/1 (116).png">
       <img src="png/1 (117).png">
       <img src="png/1 (118).png">
       <img src="png/1 (119).png">
@@ -44,7 +43,6 @@
       <img src="png/1 (13).png">
       <img src="png/1 (130).png">
       <img src="png/1 (131).png">
-      <img src="png/1 (132).png">
       <img src="png/1 (133).png">
       <img src="png/1 (134).png">
       <img src="png/1 (135).png">
@@ -55,7 +53,6 @@
       <img src="png/1 (14).png">
       <img src="png/1 (140).png">
       <img src="png/1 (141).png">
-      <img src="png/1 (142).png">
       <img src="png/1 (143).png">
       <img src="png/1 (144).png">
       <img src="png/1 (145).png">
@@ -185,12 +182,10 @@
       <img src="png/1 (83).png">
       <img src="png/1 (84).png">
       <img src="png/1 (9).png">
-      <img src="png/1 (93).png">
-      <img src="png/1 (94).png">
-      <img src="png/1 (95).png">
       <img src="png/1 (96).png">
       <img src="png/1 (97).png">
       <img src="png/1 (98).png">
       <img src="png/1 (99).png">
+      
    </body>
 </html>
